styled the board and made the initial button state empty and fixed the button shifting down bug- TODO: center the board in App

--- a/style.css
+++ b/style.css
@@ -49,3 +49,26 @@ button:hover {
 .restart:focus {
   box-shadow: 0 0 0 0.2rem rgb(0 123 255 / 50%);
 }
+
+.no-bullets li {
+  list-style-type: none;
+}
+
+.game-container {
+  display: flex;
+  justify-content: center;
+}
+
+.board-container {
+  text-align: center;
+}
+
+.square {
+  width: 50px;
+  height: 50px;
+  font-size: 1em;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
